--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
+    "scripts": {
+        "test": "phpunit"
+    },
     "autoload": {
         "psr-4": {
             "Auction\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11"
     }
 }
